--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -1,9 +1,9 @@
 
 <div id="aboutPage">
   <div id="aboutMe">
-    <header class="mainHeader"><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
+    <header class="mainHeader"><img class="wow slideInLeft" src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me" data-wow-duration="1s"/>
       <section>
-        <article>
+        <article class="wow fadeIn" data-wow-duration="1.2s">
           <h2>Hi I'm Josh Peterson</h2>
           <h4>I'm a student at DevMountain.</h4>
           <h4>Honing my Web Development skills.</h4>
@@ -11,7 +11,7 @@
       </section>
     </header>
     <section class="body">
-      <article>
+      <article class="wow fadeIn" data-wow-delay="1s">
         <ul><a href="https://github.com/echoflame14" title="GitHub">
             <li>
               <h4>GitHub</h4>
@@ -26,11 +26,11 @@
     </section>
   </div>
   <div id="skills">
-    <header>
+    <header class="wow fadeInRight" data-wow-delay="1.7s">
       <h1>Skills</h1>
     </header>
-    <h4 class="fEnd">FrontEnd</h4>
-    <section class="frontEnd"><img class="disp" src="./img/frontEndMan.jpg"/>
+    <h4 class="wow fadeInRight fEnd" data-wow-delay="1.85s">FrontEnd</h4>
+    <section class="wow fadeInRight frontEnd" data-wow-delay="1.9s"><img class="disp" src="./img/frontEndMan.jpg"/>
       <ul>
         <li><img src="./img/HTML5.png"/>
           <h4>HTML5 / Jade / Pug</h4>
@@ -55,8 +55,8 @@
         </li>
       </ul>
     </section>
-    <h4 class="bEnd">back_End</h4>
-    <section class="backEnd"><img class="disp" src="./img/backendPic.jpeg"/>
+    <h4 class="wow fadeInRight bEnd" data-wow-delay="1.95s">back_End</h4>
+    <section class="wow fadeInRight backEnd" data-wow-delay="2s"><img class="disp" src="./img/backendPic.jpeg"/>
       <ul>
         <li><img src="./img/sql.png"/>
           <h4>Sql / Postgress</h4>
