--- a/public/html/views/proj.pug
+++ b/public/html/views/proj.pug
@@ -1,22 +1,10 @@
 #projPage
 	.card
 		section.body
-			img(src="./img/bNural.png", alt="A broken pic..")
-			article
-				h4 bNural
-				p Is a site that I built for my no-server project at DevMountain.
-				p It allows the user to generate Binaural beats to control their mood.
-	.card
-		section.body
-			img(src="./img/bNural.png", alt="A broken pic..")
-			article
-				h4 bNural
-				p Is a site that I built for my no-server project at DevMountain.
-				p It allows the user to generate Binaural beats to control their mood.
-	.card
-		section.body
-			img(src="./img/bNural.png", alt="A broken pic..")
-			article
+			img(src="./img/bNural-2.png", alt="A broken pic..", data-wow-duration="0.5s", data-wow-delay="1.105s").vert.vert2.wow.fadeInLeft
+			img(src="./img/bNural-3.png", alt="A broken pic..", data-wow-duration="0.5s", data-wow-delay=".85s").hor.hor1.wow.fadeInLeft
+			img(src="./img/bNural.png", alt="A broken pic..", data-wow-duration="0.5s", data-wow-delay="0.5s").vert.vert1.wow.fadeInLeft
+			article(data-wow-duration="0.5s").wow.slideInRight
 				h4 bNural
 				p Is a site that I built for my no-server project at DevMountain.
 				p It allows the user to generate Binaural beats to control their mood.
