--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -12,13 +12,13 @@
     </header>
     <section class="body">
       <article class="wow fadeIn" data-wow-delay="1s">
-        <ul><a href="https://github.com/echoflame14" title="GitHub">
+        <ul><a href="https://github.com/echoflame14" title="GitHub" target="_blank">
             <li>
               <h4>GitHub</h4>
-            </li></a><a href="https://www.linkedin.com/in/josh-peterson-b9093910b" title="Linkedin">
+            </li></a><a href="https://www.linkedin.com/in/josh-peterson-b9093910b" title="Linkedin" target="_blank">
             <li>
               <h4>Linkedin</h4>
-            </li></a><a href="https://twitter.com/joshpdev" title="Twitter">
+            </li></a><a href="https://twitter.com/joshpdev" title="Twitter" target="_blank">
             <li>
               <h4>Twitter</h4>
             </li></a></ul>
