--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -11,13 +11,13 @@
 		section.body
 			article(data-wow-delay="1s").wow.fadeIn
 				ul
-					a(href='https://github.com/echoflame14', title="GitHub")
+					a(href='https://github.com/echoflame14', title="GitHub", target="_blank")
 						li
 							h4 GitHub
-					a(href="https://www.linkedin.com/in/josh-peterson-b9093910b", title="Linkedin")
+					a(href="https://www.linkedin.com/in/josh-peterson-b9093910b", title="Linkedin", target="_blank")
 							li
 								h4 Linkedin
-					a(href="https://twitter.com/joshpdev", title="Twitter")
+					a(href="https://twitter.com/joshpdev", title="Twitter", target="_blank")
 						li
 							h4 Twitter
 
