--- a/public/css/_about.scss
+++ b/public/css/_about.scss
@@ -1,3 +1,26 @@
+#aboutPage{
+	#aboutMe{
+		section.body{
+			article{
+				ul{
+					a{
+						li{
+							border-radius:0.2em;
+							border-bottom-left-radius:0;
+							color:white;
+							padding:0.7vw;
+							background-color:$blue;
+						}
+						li:hover{
+							transform:scale(1.04);
+							box-shadow:0.1em 0.1em 0.3em $sup-op-black;
+						}
+					}
+				}
+			}
+		}
+	}
+}
 
 @media only screen and (max-width: 425px) and (min-width:0px){
 	#aboutPage{
